# blackhat

./: Makefile.in  aclocal.m4  config.h.in  configure
Python/: BHLH.py  BH_LH_Interface.cpp  BH_LH_Interface.i  Makefile.am  Makefile.in  PythonInterface.cpp
SherpaPlugin/: BH_Sherpa_Interface.cpp  Makefile.am  Makefile.in
datafiles/assembly/: Makefile.am  Makefile.in
datafiles/parents/: Makefile.am  Makefile.in
examples/: BHLH_example.py  Makefile.am  Makefile.in  contract_file.lh  cpp_example.cpp  fortran_example.f
my_programs/: Makefile.am  Makefile.in
src/: BH_A0.h  BH_debug.cpp  BH_debug.h  BH_error.h  BH_forward.h  BH_particle_names.h  BH_typedefs.h  BH_utilities.h  BHpath.h.in  BerendsGiele.cpp  BerendsGiele.h  BerendsGiele_impl.h  GMP_random.cpp  GMP_random.h  Get3ptType.cpp  IR_checked.h  IR_checked_amplitudes.cpp  IR_checked_amplitudes_ep.cpp  IR_checked_cut_part.cpp  IR_checked_cut_part.h  ME2_from_file.cpp  ME2_from_file.h  Makefile.am  Makefile.in  NoAmpl.h  OneLoopHelAmpl.cpp  OneLoopHelAmpl.h  Series.cpp  Series.h  Tree.h  Tree_impl.h  amplitudes.cpp  amplitudes.h  arrange_flavors.cpp  arrange_flavors.h  assembly.cpp  assembly.h  bubble_specification.h  cached_EP.cpp  cached_EP.h  (+153 more)
src/Interface/: BH_Ampl.cpp  BH_Ampl.h  BH_Ampl_2q1g1y.cpp  BH_Ampl_2q1g2l.cpp  BH_Ampl_2q2Q1g.cpp  BH_Ampl_2q2Q1g1y.cpp  BH_Ampl_2q2Q1g2l.cpp  BH_Ampl_2q2Q1y.cpp  BH_Ampl_2q2Q2P.cpp  BH_Ampl_2q2Q2g.cpp  BH_Ampl_2q2Q2g2l.cpp  BH_Ampl_2q2Q2l.cpp  BH_Ampl_2q2g1y.cpp  BH_Ampl_2q2g2l.cpp  BH_Ampl_2q2l.cpp  BH_Ampl_2q3g1y.cpp  BH_Ampl_2q3g2l.cpp  BH_Ampl_2q4g2l.cpp  BH_Ampl_2q5g2l.cpp  BH_Ampl_6q2l.cpp  BH_Ampl_automatic.cpp  BH_Ampl_processes.h  BH_LH_interface.cpp  BH_LH_interface.h  BH_ampl_impl.cpp  BH_ampl_impl.h  BH_interface.cpp  BH_interface.h  BH_interface_impl.h  Makefile.am  Makefile.in  OptionsHandler.cpp  OptionsHandler.h  OptionsHandler.hpp
src/cut/: C_2q1g1y_wCI.cpp  C_2q1g1y_wCI.h  C_2q1g2l_wCI.cpp  C_2q1g2l_wCI.h  C_2q2Gl2l_wCI.cpp  C_2q2Gl2l_wCI.h  C_2q2Q1g_wCI.cpp  C_2q2Q1g_wCI.h  C_2q2Q1ph_wCI.cpp  C_2q2Q1ph_wCI.h  C_2q2Q1y_wCI.cpp  C_2q2Q1y_wCI.h  C_2q2Q2l_wCI.cpp  C_2q2Q2l_wCI.h  C_2q2Q_wCI.cpp  C_2q2Q_wCI.h  C_2q2g1ph_wCI.cpp  C_2q2g1ph_wCI.h  C_2q2g1y_wCI.cpp  C_2q2g1y_wCI.h  C_2q2g2l_wCI.cpp  C_2q2g2l_wCI.h  C_2q2g_wCI.cpp  C_2q2g_wCI.h  C_2q3g_wCI.cpp  C_2q3g_wCI.h  C_3g1ph_wCI.cpp  C_3g1ph_wCI.h  C_4g1ph_wCI.cpp  C_4g1ph_wCI.h  C_4g_wCI.cpp  C_4g_wCI.h  C_5g_wCI.cpp  C_5g_wCI.h  C_6g_wCI.cpp  C_6g_wCI.h  Known_Cut_wCI.cpp  Known_Cut_wCI.h  Makefile.am  Makefile.in
src/cut_eval/: C_2q1g1y_eval.cpp  C_2q1g1y_eval.h  C_2q1g2l_eval.cpp  C_2q1g2l_eval.h  C_2q2Gl2l_eval.cpp  C_2q2Gl2l_eval.h  C_2q2Q1g_eval.cpp  C_2q2Q1g_eval.h  C_2q2Q1y_eval.cpp  C_2q2Q1y_eval.h  C_2q2Q2l_eval.cpp  C_2q2Q2l_eval.h  C_2q2Q_eval.cpp  C_2q2Q_eval.h  C_2q2g1y_eval.cpp  C_2q2g1y_eval.h  C_2q2g1y_wCI_eval.cpp  C_2q2g1y_wCI_eval.h  C_2q2g2l_eval.cpp  C_2q2g2l_eval.h  C_2q2l_eval.cpp  C_2q2l_eval.h  C_2q3g2l_eval.cpp  C_2q3g2l_eval.h  C_2q3g_eval.cpp  C_2q3g_eval.h  Makefile.am  Makefile.in  amplitudes_cut_eval.h
src/ratext/: Makefile.am  Makefile.in  basecutRat.cpp  basecutRat.h  box_ratext.cpp  box_ratext.h  box_ratext.hpp  bubble_ratext.cpp  bubble_ratext.h  bubble_ratext.hpp  filename.cpp  filename.h  momenta_evaluator_ratext.h  momenta_evaluator_ratext.hpp  pentagon_ratext.cpp  pentagon_ratext.h  pentagon_ratext.hpp  rat_ext.h  rat_options.h  rat_worker.cpp  rat_worker.h  ratext_part.h  ratext_part.hpp  ratext_part_worker.cpp  ratext_part_worker.h  ratext_worker.cpp  triangle_ratext.cpp  triangle_ratext.h  triangle_ratext.hpp
src/rational_eval/: Makefile.am  Makefile.in  R_2g2q_eval.cpp  R_2g2q_eval.h  R_2q1g1y_eval.cpp  R_2q1g1y_eval.h  R_2q1g2l_eval.cpp  R_2q1g2l_eval.h  R_2q2G1g2l_eval.cpp  R_2q2G1g2l_eval.h  R_2q2Gl2l_eval.cpp  R_2q2Gl2l_eval.h  R_2q2Q1g_eval.cpp  R_2q2Q1g_eval.h  R_2q2Q1ph_eval.cpp  R_2q2Q1ph_eval.h  R_2q2Q1y_eval.cpp  R_2q2Q1y_eval.h  R_2q2Q2l_eval.cpp  R_2q2Q2l_eval.h  R_2q2Q_eval.cpp  R_2q2Q_eval.h  R_2q2g1ph_eval.cpp  R_2q2g1ph_eval.h  R_2q2g1y_eval.cpp  R_2q2g1y_eval.h  R_2q2g2l_eval.cpp  R_2q2g2l_eval.h  R_2q2g_eval.cpp  R_2q2g_eval.h  R_2q2l_eval.cpp  R_2q2l_eval.h  R_2q3g2l_eval.cpp  R_2q3g2l_eval.h  R_2q3g2l_place_holder_eval.cpp  R_2q3g_eval.cpp  R_2q3g_eval.h  R_2q3g_r_eval.cpp  R_2q3g_r_eval.h  R_2q4g_eval.cpp  (+22 more)
src/trees_eval/: A0_1phi_Q_massive.cpp  A0_1phi_eval.cpp  A0_1phi_scalar.cpp  A0_1phi_scalar_2.cpp  A0_1phi_scalar_massive.cpp  A0_2Gsc_eval.cpp  A0_2q1_2q2_2q3_eval.cpp  A0_2q1g1y_eval.cpp  A0_2q1g2Q_eval.cpp  A0_2q1g2l_eval.cpp  A0_2q1g_eval.cpp  A0_2q2Gl1y_eval.cpp  A0_2q2Q1g2l_eval.cpp  A0_2q2Q1y_eval.cpp  A0_2q2Q2g2l_eval.cpp  A0_2q2Q2l_eval.cpp  A0_2q2Q3g2l_eval.cpp  A0_2q2Q_eval.cpp  A0_2q2g1y_eval.cpp  A0_2q2g2Q_eval.cpp  A0_2q2g2l_eval.cpp  A0_2q2g_eval.cpp  A0_2q2l2G_eval.cpp  A0_2q2l_eval.cpp  A0_2q3g2l_eval.inc  A0_2q3g2l_eval_0.hpp  A0_2q3g2l_eval_1.hpp  A0_2q3g2l_eval_2.hpp  A0_2q3g2l_eval_3.hpp  A0_2q3g2l_eval_4.hpp  A0_2q3g2l_eval_5.hpp  A0_2q3g2l_eval_6.hpp  A0_2q3g2l_eval_7.hpp  A0_2q3g2l_eval_8.hpp  A0_2q3g2l_eval_9.hpp  A0_2q3g2l_eval_RGMP_0.cpp  A0_2q3g2l_eval_RGMP_2.cpp  A0_2q3g2l_eval_RGMP_3.cpp  A0_2q3g2l_eval_RGMP_4.cpp  A0_2q3g2l_eval_RGMP_5.cpp  (+45 more)
test/: 2j_ME2_check.cpp  2j_PS.cpp  3j_ME2_check.cpp  3j_PS.cpp  4j_ME2_check.cpp  4j_loop_ME2_check.cpp  CollTest.py  CollTest.py.in  CollinearLimit.cpp  Makefile.am  Makefile.in  PStest.hpp  W1j_ME2_check.cpp  W2j_ME2_check.cpp  W3j_partial_and_ME2_check.cpp  W_ME2_check.cpp  Wm1_PS.cpp  Wm2_PS.cpp  Wm3_PS.cpp  Wm_PS.cpp  Y1_PS.cpp  Y1j_ME2_check.cpp  Y2_PS.cpp  Y2j_ME2_check.cpp  Y3_PS.cpp  Y3j_ME2_check.cpp  Z1_PS.cpp  Z1j_ME2_check.cpp  Z2_PS.cpp  Z2j_ME2_check.cpp  Z3_PS.cpp  Z3j_ME2_check.cpp  Z_PS.cpp  compare_mmpmmp.grace.in  compare_mmpmpp.grace.in  compare_mpmpmp.grace.in  do_tests.pl  singleTest.sh  testAll.py  testAll.py.in  (+1 more)
test/PStest/: README  get_PSdata.sh  get_targets.sh
test/PStest/Wm3/: PSpoints.dat.all  target.dat.all
test/PStest/Y3/: PSpoints.dat.all  generate_PS.sh_bak  target.dat.all
test/PStest/Z3/: PSpoints.dat.all  target.dat.all
(+19 files in other folders)
