if PUBLIC

YY0j = \
ME2_2q2y.dat 

YY1j = \
ME2_1g2q2y.dat 

YY2j = \
ME2_2g2q2y.dat \
ME2_4q2y.dat 

YY3j = \
ME2_1g4q2y.dat \
ME2_3g2q2y.dat 

Y1j = \
ME2_1g2q1y.dat 

Y2j = \
ME2_2g2q1y.dat \
ME2_4q1y.dat 

Y3j = \
ME2_1g4q1y.dat \
ME2_3g2q1y.dat 

Y4j = \
ME2_2g4q1y.dat \
ME2_4g2q1y.dat \
ME2_6q1y.dat 

Y5j = \
ME2_1g6q1y.dat \
ME2_3g4q1y.dat \
ME2_5g2q1y.dat 

V0j = \
ME2_2q2l.dat 

V1j = \
ME2_1g2q2l.dat 

V2j = \
ME2_2g2q2l.dat \
ME2_4q2l.dat 

V3j = \
ME2_1g4q2l.dat \
ME2_3g2q2l.dat 

V4j = \
ME2_2g4q2l.dat \
ME2_4g2q2l.dat \
ME2_6q2l.dat 

V5j = \
ME2_1g6q2l.dat \
ME2_3g4q2l.dat \
ME2_3g4q2l_harald.dat \
ME2_5g2q2l.dat 


J2 = \
ME2_2g2q.dat \
ME2_4g.dat \
ME2_4q.dat 

J3 = \
ME2_1g4q.dat \
ME2_3g2q.dat \
ME2_5g.dat 

J4 = \
ME2_2g4q.dat \
ME2_4g2q.dat \
ME2_6g.dat \
ME2_6q.dat 

J5 = \
ME2_1g6q.dat \
ME2_3g4q.dat \
ME2_5g2q.dat \
ME2_7g.dat

assemblydir=$(pkgdatadir)/assembly

dist_assembly_DATA = $(V0j) $(V1j) $(V2j) $(V3j) $(Y0j) $(Y1j) $(Y2j) $(Y3j)  $(J2) $(J3) $(J4)

endif