if PUBLIC

parentdir=$(pkgdatadir)/parents



J2 =  parents_2g2q.dat partials_2g2q.dat parents_4g.dat partials_4g.dat parents_4q.dat partials_4q.dat            
J3 = partials_1g4q.dat parents_1g4q.dat parents_3g2q.dat partials_3g2q.dat parents_5g.dat partials_5g.dat
J4 = parents_2g4q.dat partials_2g4q.dat parents_4g2q.dat partials_4g2q.dat parents_6g.dat partials_6g.dat parents_6q.dat partials_6q.dat
J5 = partials_1g6q.dat parents_1g6q.dat parents_3g4q.dat partials_3g4q.dat parents_5g2q.dat partials_5g2q.dat parents_7g.dat partials_7g.dat
J6 = parents_8g.dat          
J7 = parents_9g.dat

          

Y1 = partials_1g2q1y.dat parents_1g2q1y.dat         
Y2 = partials_2g2q1y.dat parents_2g2q1y.dat parents_4q1y.dat partials_4q1y.dat
Y3 = partials_1g4q1y.dat parents_1g4q1y.dat parents_3g2q1y.dat partials_3g2q1y.dat

Y4 = parents_2g4q1y.dat  partials_2g4q1y.dat parents_4g2q1y.dat partials_4g2q1y.dat parents_6q1y.dat partials_6q1y.dat
Y5 = partials_1g6q1y.dat parents_1g6q1y.dat parents_3g4q1y.dat partials_3g4q1y.dat parents_5g2q1y.dat partials_5g2q1y.dat        

YY0 = parents_2q2y.dat partials_2q2y.dat
YY1 = partials_1g2q2y.dat partials_1g2q2y_photon.dat parents_1g2q2y.dat         
YY2 = partials_2g2q2y.dat parents_2g2q2y.dat partials_2g2q2y_photon.dat parents_4q2y.dat partials_4q2y.dat partials_4q2y_photon.dat
YY3 = parents_3g2q2y.dat partials_3g2q2y.dat

V0= parents_2q2l.dat partials_2q2l.dat
V1= partials_1g2q2l.dat parents_1g2q2l.dat         
V2= partials_2g2q2l.dat parents_2g2q2l.dat parents_4q2l.dat partials_4q2l.dat
V3= partials_1g4q2l.dat parents_1g4q2l.dat parents_3g2q2l.dat partials_3g2q2l.dat
V4= parents_2g4q2l.dat partials_2g4q2l.dat parents_4g2q2l.dat partials_4g2q2l.dat parents_6q2l.dat partials_6q2l.dat
V5= partials_1g6q2l.dat parents_1g6q2l.dat parents_3g4q2l.dat partials_3g4q2l.dat parents_3g4q2l_harald.dat partials_3g4q2l_harald.dat parents_5g2q2l.dat partials_5g2q2l.dat


        
dist_parent_DATA = $(J2) $(J3) $(J4) $(Y1) $(Y2) $(Y3) $(V0) $(V1) $(V2) $(V3)

       



endif