

pkglib_LTLIBRARIES = libInterface.la 


libInterface_la_SOURCES = BH_Ampl.cpp BH_Ampl.h  \
					BH_Ampl_2q2g1y.cpp \
					BH_Ampl_2q3g1y.cpp \
					BH_Ampl_2q2g2l.cpp \
					BH_Ampl_2q1g1y.cpp \
					BH_Ampl_2q2l.cpp \
					BH_Ampl_2q1g2l.cpp \
					BH_Ampl_2q2Q1y.cpp \
					BH_Ampl_2q2Q1g1y.cpp \
					BH_Ampl_2q2Q1g.cpp \
					BH_Ampl_2q2Q2g.cpp \
					BH_Ampl_2q2Q2P.cpp \
					BH_Ampl_2q2Q2l.cpp \
					BH_Ampl_2q3g2l.cpp \
					BH_Ampl_2q4g2l.cpp \
					BH_Ampl_2q5g2l.cpp \
					BH_Ampl_2q2Q1g2l.cpp \
					BH_Ampl_2q2Q2g2l.cpp \
					BH_Ampl_6q2l.cpp \
					BH_Ampl_automatic.cpp \
					BH_Ampl_processes.h \
					BH_interface.h BH_interface.cpp BH_interface_impl.h \
					OptionsHandler.h OptionsHandler.cpp OptionsHandler.hpp \
					BH_LH_interface.cpp BH_LH_interface.h \
					BH_ampl_impl.h BH_ampl_impl.cpp

pkginclude_HEADERS = BH_LH_interface.h BH_interface.h BH_Ampl.h
