
pkglib_LTLIBRARIES =  libCut_wCI.la

libCut_wCI_la_SOURCES = \
					C_2q1g2l_wCI.cpp C_2q1g2l_wCI.h \
					C_2q3g_wCI.cpp C_2q3g_wCI.h \
					C_2q2g2l_wCI.cpp C_2q2g2l_wCI.h \
					C_2q2Q2l_wCI.cpp C_2q2Q2l_wCI.h \
					C_2q1g1y_wCI.cpp C_2q1g1y_wCI.h  \
					C_2q2Q1y_wCI.cpp C_2q2Q1y_wCI.h \
					C_2q2g1y_wCI.cpp C_2q2g1y_wCI.h \
					C_2q2Q_wCI.cpp C_2q2Q_wCI.h \
					C_2q2Q1g_wCI.cpp C_2q2Q1g_wCI.h \
					C_2q2Gl2l_wCI.cpp C_2q2Gl2l_wCI.h \
					C_2q2g_wCI.cpp C_2q2g_wCI.h \
					C_4g_wCI.cpp C_4g_wCI.h \
					C_5g_wCI.cpp C_5g_wCI.h \
					C_6g_wCI.cpp C_6g_wCI.h \
					C_3g1ph_wCI.cpp C_3g1ph_wCI.h \
					C_4g1ph_wCI.cpp C_4g1ph_wCI.h \
					C_2q2g1ph_wCI.cpp C_2q2g1ph_wCI.h \
					C_2q2Q1ph_wCI.cpp C_2q2Q1ph_wCI.h \
					Known_Cut_wCI.h Known_Cut_wCI.cpp  


