
pkglib_LTLIBRARIES = libCuteval.la


libCuteval_la_SOURCES = C_2q1g2l_eval.cpp C_2q1g2l_eval.h \
					C_2q3g_eval.cpp C_2q3g_eval.h \
					C_2q2g2l_eval.cpp C_2q2g2l_eval.h \
					C_2q2l_eval.cpp C_2q2l_eval.h \
					C_2q3g2l_eval.cpp C_2q3g2l_eval.h \
					C_2q2Q2l_eval.cpp C_2q2Q2l_eval.h \
					C_2q1g1y_eval.cpp C_2q1g1y_eval.h \
					C_2q2g1y_eval.cpp C_2q2g1y_eval.h \
					C_2q2Q1y_eval.cpp C_2q2Q1y_eval.h \
					C_2q2g1y_wCI_eval.cpp C_2q2g1y_wCI_eval.h \
					C_2q2Q_eval.cpp C_2q2Q_eval.h \
					C_2q2Q1g_eval.cpp C_2q2Q1g_eval.h \
					C_2q2Gl2l_eval.cpp C_2q2Gl2l_eval.h \
					amplitudes_cut_eval.h 

