
pkglib_LTLIBRARIES = libratext.la

libratext_la_SOURCES = \
		     		rat_ext.h\
		     		rat_options.h  \
		     		rat_worker.h rat_worker.cpp\
		     		bubble_ratext.h bubble_ratext.hpp bubble_ratext.cpp\
		     		triangle_ratext.h triangle_ratext.hpp triangle_ratext.cpp \
		     		box_ratext.h box_ratext.hpp box_ratext.cpp \
		     		pentagon_ratext.h pentagon_ratext.hpp pentagon_ratext.cpp \
		     		ratext_worker.cpp   \
		     		ratext_part.h ratext_part.hpp \
		     		ratext_part_worker.cpp ratext_part_worker.h  \
					filename.h filename.cpp \
					momenta_evaluator_ratext.h momenta_evaluator_ratext.hpp \
					basecutRat.h basecutRat.cpp 
		     		
if ! PUBLIC
nodist_libratext_la_SOURCES = \
		     		cut_part_D_Dims.cpp cut_part_D_Dims.h  \
		     		partitions_D_Dims.h rat_options.cpp \
		     		cutRat_comp.cpp cutRat_comp.h \
		     		data_files.h data_files.cpp \
		     		parent_diagrams_massive.cpp \
		     		ext_spurious.h ext_spurious.cpp \
					rat_mix.h rat_mix_aux.h rat_mix.cpp momenta_evaluator_ratmix.h \
		     		bubble_ratmix.h bubble_ratmix.hpp bubble_ratmix.cpp \
		     		triangle_ratmix.h triangle_ratmix.hpp triangle_ratmix.cpp \
		     		box_ratmix.h box_ratmix.hpp box_ratmix.cpp \
		     		ratext_normal.cpp ratext_part_normal.cpp

endif
